eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Special_condition_item__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accepted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_condition_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Added_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_condition_items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chase_condition_by__c</fullName>
        <formula>Opportunity__r.Actual_completion_date__c + (Chase_within_months_number__c*30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chase condition by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chase_within_months__c</fullName>
        <label>Chase within months</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chase_within_months_number__c</fullName>
        <formula>VALUE (text(Chase_within_months__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chase within months number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Conga_HTML__c</fullName>
        <label>Condition Conga HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Data__c</fullName>
        <label>Condition Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_HTML__c</fullName>
        <label>Condition HTML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Letter__c</fullName>
        <label>Condition Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Special condition items</relationshipLabel>
        <relationshipName>Special_condition_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post_Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_or_Post__c</fullName>
        <label>Pre or Post</label>
        <picklist>
            <picklistValues>
                <fullName>Pre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reet_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reet Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <formula>Name &amp; &quot;-&quot; &amp; Special_Condition__r.Condition_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Condition_Data__c</fullName>
        <label>Special Condition Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Condition_Text__c</fullName>
        <label>Special Condition Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Special Condition</label>
        <referenceTo>Special_Condition__c</referenceTo>
        <relationshipLabel>Special condition items</relationshipLabel>
        <relationshipName>Special_condition_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Special condition item</label>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>Special condition item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special condition items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>